Fixed Contrast

--- a/bountiful/styles/mobile.css
+++ b/bountiful/styles/mobile.css
@@ -56,7 +56,7 @@
     }
     .see-more, .see-less{
         display: inline-block;
-        color: var(--primary-color);
+        color: rgb(255, 2, 2);
         text-decoration: underline;
         cursor: pointer;
     }
